There is no `ConstructorStrategy.Default.IMITATE_SUPER_TYPE` but `IMITATE_SUPER_CLASS`
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -1834,7 +1834,7 @@ new ByteBuddy()
 
 <pre class="prettyprint">
 new ByteBuddy()
-  .subclass(Object.class, ConstructorStrategy.Default.IMITATE_SUPER_TYPE)
+  .subclass(Object.class, ConstructorStrategy.Default.IMITATE_SUPER_CLASS)
   .make()
 </pre>
 
