--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -1421,6 +1421,8 @@ void foo(@Argument(0) Object o1, @Argument(1) Object o2)
     tutorial.
 </p>
 
+<h5>Accessing super implementations</h5>
+
 <p>
     Besides the four annotation we have discussed so far, there exist two other predefined annotations that grant
     access to the super implementations of a dynamic type's methods. This way, a dynamic type could for example add
@@ -1547,6 +1549,7 @@ class ChangingLoggerInterceptor {
     implementation.
 </p>
 
+<h5>Checked exceptions</h5>
 <p>
     Furthermore, you might already have noticed that the above <code>LoggerInterceptor</code> declares a
     <a href="http://docs.oracle.com/javase/tutorial/essential/exceptions/declaring.html">checked
@@ -1559,6 +1562,7 @@ class ChangingLoggerInterceptor {
     application.
 </p>
 
+<h5>Dynamic types for interceptor parameters</h5>
 <p>
     There is another caveat in the method delegation model that might have come to your attention. While static typing
     is great for implementing methods, strict types can limit the reuse of code. To understand why, consider the
@@ -1597,6 +1601,7 @@ class Interceptor {
     <code>ClassCastException</code> if you get incompatible types mixed up.
 </p>
 
+<h5>Delegation to an interface's default method</h5>
 <p>
     As an equivalent to <code>@SuperCall</code>, Byte Buddy comes with a <code>@DefaultCall</code> annotation which
     allows the invocation of a default method instead of calling a method's super method. A method with this parameter
@@ -1612,6 +1617,7 @@ class Interceptor {
     a proxy for invoking a specific default method explicitly.
 </p>
 
+<h5>Forwarding method invocations</h5>
 <p>
     We already mentioned that you can define and register custom annotations with any <code>MethodDelegation</code>.
     Byte Buddy comes with one annotation that is ready for use, but still needs to be <i>installed</i> and registered
@@ -1674,6 +1680,7 @@ loggingDatabase.load("Hello");
     of registering a static interceptor on the class level.
 </p>
 
+<h5>Ambiguity resolver for selection of target methods</h5>
 <p>
     So far, we have seen a great deal of the <code>MethodDelegation</code> implementation. But before we proceed,
     we want to take a more detailed look on how Byte Buddy selects a target method. We already described how Byte
@@ -1712,6 +1719,7 @@ loggingDatabase.load("Hello");
     </span></li>
 </ul>
 
+<h5>Delegating calls to instance methods</h5>
 <p>
     So far, we only delegated method invocations to static methods by naming a specific class as in
     <code>MethodDelegation.to(Target.class)</code>. It is however also possible to delegate to instance methods
@@ -1741,6 +1749,7 @@ loggingDatabase.load("Hello");
     </span></li>
 </ul>
 
+<h5>Independence from Byte Buddy</h5>
 <p>
     As you just learned, the <code>MethodDelegation</code> inspects annotations for adjusting its binding logic.
     These annotations are specific to Byte Buddy but this does not mean that the annotated classes become in any
@@ -1750,6 +1759,7 @@ loggingDatabase.load("Hello");
     in another JVM process even without having Byte Buddy on the class path.
 </p>
 
+<h5>Other MethodDelegation annotations</h5>
 <p>
     There are several more predefined annotations that can be used with a <code>MethodDelegation</code> that we
     only want to name briefly. If you want to read more about these annotations, you can find further information in
