Adds note to avoid confusion between `SuperMethodCall` class and `@SuperCall` annotation.
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -1817,7 +1817,8 @@ loggingDatabase.load("Hello");
 <h4>Calling a super method</h4>
 
 <p>
-    As the name suggests, the <code>SuperMethodCall</code> implementation can be used to invoke a method's super
+    As the name suggests, the <code>SuperMethodCall</code> implementation (do not confuse this class with the <code>@SuperCall</code> annotation)
+    can be used to invoke a method's super
     implementation. At first glance, the sole invocation of a super implementation does not seem very useful
     since this will not change an implementation but only replicate existent logic. However, by overriding a method,
     you are able to change the annotations of a method and its parameters, something we will look into in the next
