Small grammar fixes on Miscellaneous section
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -2129,14 +2129,14 @@ UserType userType = (UserType) factory.makeInstance();
         which can cover use cases where no target method discovery is required.
     </span></li>
     <li><span>
-        The <code>InvocationHandlerAdapter</code> allows to use existing <code>InvocationHandler</code>s from the
-        for the <a href="http://docs.oracle.com/javase/8/docs/api/java/lang/reflect/Proxy.html">proxy classes</a>
+        The <code>InvocationHandlerAdapter</code> allows to use existing <code>InvocationHandler</code>s from
+        the <a href="http://docs.oracle.com/javase/8/docs/api/java/lang/reflect/Proxy.html">proxy classes</a>
         that ship with the Java Class Library.
     </span></li>
     <li><span>
         The <code>InvokeDynamic</code> implementation allows to bind a method dynamically at runtime using
-        <a href="http://docs.oracle.com/javase/8/docs/api/java/lang/invoke/package-summary.html">a bootstrap methods</a>
-        which are accessible from Java 7 on.
+        <a href="http://docs.oracle.com/javase/8/docs/api/java/lang/invoke/package-summary.html">bootstrap methods</a>
+        which are accessible from Java 7 onwards.
     </span></li>
 </ul>
 
