There is no `MethodAttributeAppender.ForInstrumentedMethod.INSTANCE` but `MethodAttributeAppender.ForInstrumentedMethod.INCLUDING_RECEIVER` and `MethodAttributeAppender.ForInstrumentedMethod.EXCLUDING_RECEIVER`.
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -2267,7 +2267,7 @@ new ByteBuddy()
   .subclass(AnnotatedMethod.class)
   .method(named("bar"))
   .intercept(StubMethod.INSTANCE)
-  .attribute(MethodAttributeAppender.ForInstrumentedMethod.INSTANCE)
+  .attribute(MethodAttributeAppender.ForInstrumentedMethod.INCLUDING_RECEIVER)
 </pre>
 
 <p>
