Adds links to docs about Java's type annotations.
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -2243,9 +2243,9 @@ new ByteBuddy()
 <h4>Type annotations</h4>
 
 <p>
-    Byte Buddy exposes and writes type annotations as they were introduced as a part of Java 8. Type annotations are
-    accessible as declared annotations by the any <code>TypeDescription.Generic</code> instance. If a type annotation
-    should be added to a type of a generic field or method, an annotated type can be generated using a
+    Byte Buddy exposes and writes <a href="https://docs.oracle.com/javase/tutorial/java/annotations/type_annotations.html">type annotations as they were introduced as a part of Java 8</a>.
+    Type annotations are accessible as declared annotations by any <code>TypeDescription.Generic</code> instance.
+    If a type annotation should be added to a type of a generic field or method, an annotated type can be generated using a
     <code>TypeDescription.Generic.Builder</code>.
 </p>
 
