--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -1252,7 +1252,7 @@ new ByteBuddy()
     Buddy provides the <code>MethodDelegation</code> implementation which offers maximal freedom in reacting to method
     calls. A method delegation makes a method of the dynamically created type to forward any call to another
     method which may live outside the dynamic type. When providing a reference to the target class where a method call will be delegated to,
-    the target methods must be static for the delegation to work (instance methods are supported. as detailed further).
+    the target methods must be static for the delegation to work (instance methods are also supported, as detailed further).
     This way, a dynamic class's logic can be represented using
     plain Java, while only the binding to another method is achieved by code generation. Before discussing the details,
     let us look at an example of using a <code>MethodDelegation</code>:
@@ -2156,7 +2156,8 @@ UserType userType = (UserType) factory.makeInstance();
 
 <pre class="prettyprint">
 @Retention(RetentionPolicy.RUNTIME)
-@interface RuntimeDefinition { }
+@interface RuntimeDefinition {
+}
 
 class RuntimeDefinitionImpl implements RuntimeDefinition {
   @Override
@@ -2182,9 +2183,9 @@ new ByteBuddy()
     </p>
 
     <p>
-        Defining annotations for a dynamically created class can be in particularly important when a class should serve
+        Defining annotations for a dynamically created class can be particularly important when a class should serve
         as a subclass proxy for another class. A subclass proxy is often used to implement
-        <a href="http://en.wikipedia.org/wiki/Cross-cutting_concern">cross-cutting concerns</a> where the subclass
+        <a href="http://en.wikipedia.org/wiki/Cross-cutting_concern">cross-cutting concerns</a>, where the subclass
         should mimic the original class as transparently as possible. However, annotations on a class are not retained
         for its subclasses as long as this behavior is explicitly required by defining an annotation to be
         <a href="http://docs.oracle.com/javase/8/docs/api/java/lang/annotation/Inherited.html"><code>@Inherited</code></a>.
@@ -2253,8 +2254,8 @@ new ByteBuddy()
 <h4>Attribute appenders</h4>
 
 <p>
-    A Java class file can include any custom information as a so-called attribute. Such attributes can be included using
-    Byte Buddy by using an <code>*AttributeAppender</code> for a type, field or method. Attribute appenders can however
+    A Java class file can include any custom information as a so-called attribute. Such attributes can be included by using
+    a Byte Buddy's <code>*AttributeAppender</code> instance for a type, field or method. Attribute appenders can however
     also be used for defining methods based on information that is provided by the intercepted type, field or method. For
     example, it is possible to copy all annotations of an intercepted method when overriding a method in a subclass:
 </p>
