Adds new heading and fix the level of other headings inside the "Annotations" section.
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -2198,6 +2198,7 @@ new ByteBuddy()
         defined more than once for any class.
     </p>
 
+    <h3>Annotating methods and fields</h3>
     <p>
         Method and field annotations are defined similarly to type annotations which we just discussed. A method
         annotation can be defined as a conclusive statement in Byte Buddy's domain specific language for implementing a
@@ -2242,7 +2243,7 @@ new ByteBuddy()
         providing an <code>AnnotationFilter</code> to a <code>ByteBuddy</code> instance.
     </p>
 
-<h4>Type annotations</h4>
+<h3>Type annotations</h3>
 
 <p>
     Byte Buddy exposes and writes <a href="https://docs.oracle.com/javase/tutorial/java/annotations/type_annotations.html">type annotations as they were introduced as a part of Java 8</a>.
@@ -2251,7 +2252,7 @@ new ByteBuddy()
     <code>TypeDescription.Generic.Builder</code>.
 </p>
 
-<h4>Attribute appenders</h4>
+<h3>Attribute appenders</h3>
 
 <p>
     A Java class file can include any custom information as a so-called attribute. Such attributes can be included by using
