--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -1147,7 +1147,8 @@ Foo dynamicFoo = new ByteBuddy()
 
 <p>
     In some scenarios, you might want to define a new method that does not override a method of a super type or an
-    interface. This is also possible using Byte Buddy. For this purpose, you can call <code>define(Method)</code> where
+    interface. This is also possible using Byte Buddy. For this purpose, you can call <code>define(Method)</code>
+    or <code>defineMethod(name, ...) where
     you are able to define a signature. After defining a method, you are asked to provide an
     <code>Implementation</code> just as with a method that was identified by a method matcher. Note that method
     matchers that are registered after a method's definition might supersede this implementation by the stacking
@@ -1155,7 +1156,7 @@ Foo dynamicFoo = new ByteBuddy()
 </p>
 
 <p>
-    With <code>define(Field)</code>, Byte Buddy allows to define fields for a given type. In Java, fields are never
+    With <code>define(Field)</code> or <code>defineField(name, ...)</code>, Byte Buddy allows to define fields for a given type. In Java, fields are never
     overridden but can only be <a href="http://en.wikipedia.org/wiki/Variable_shadowing">shadowed</a>. For this reason,
     no field matching or the like is available.
 </p>
